# P4

./: README.md
GazeboModel/House/: model.config  model.sdf
GazeboModel/House_World/: house_world
P4_ws/.catkin_tools/profiles/default/: devel_collisions.txt
P4_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
P4_ws/devel/.private/SimonErGrim_pkg/: local_setup.sh
P4_ws/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
P4_ws/devel/lib/pkgconfig/: SimonErGrim_pkg.pc  catkin_tools_prebuild.pc
P4_ws/devel/share/SimonErGrim_pkg/cmake/: SimonErGrim_pkgConfig-version.cmake  SimonErGrim_pkgConfig.cmake
P4_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
P4_ws/src/SimonErGrim_pkg/: CMakeLists.txt  package.xml
P4_ws/src/SimonErGrim_pkg/src/: Simonella.cpp
Sound_selection_test/: Main.asv  Main.m  plot_modeling.m
Sound_selection_test/GWN/: GWN-10SNR.csv  GWN-20SNR.csv  GWN20SNR.csv
Sound_selection_test/Results/ego-noise/: ego-10SNR.csv  ego0SNR.csv
Sound_selection_test/ego-noise/: ego-20SNR.csv  ego10SNR.csv  ego20SNR.csv
Sound_selection_test/functions/: DistanceCalc.m  ExtractCleanAndObserved.m  defaultSetup.m  loadWav.m  plotRoom.m
Sound_selection_test/lib/: defaultMiscSetup.m  generateMultichanBabbleNoise.m  generateRirs.m  generateSignals.m  plotRIRs.m  plotSignals.m
Sound_selection_test/lib/rir/: example_1.m  rir_generator.mexw64
(+4 files in other folders)
